--- a/Output/STM32-DEMO.build_log.htm
+++ b/Output/STM32-DEMO.build_log.htm
@@ -27,6 +27,10 @@ Project File Date:  11/20/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'LED-DEMO'
+compiling main.c...
+linking...
+Program Size: Code=4504 RO-data=1360 RW-data=1500 ZI-data=1028  
+FromELF: creating hex file...
 "..\Output\STM32-DEMO.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -41,7 +45,7 @@ Package Vendor: Keil
   D:\Keil_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.2.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
